--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <center>
 <iframe
-    src="https://gateway.ipfscdn.io/ipfs/QmRHAgPic1HeakAw9EU7WRjt4NPE19pWb8hCorRNhw4Zdy/erc1155.html?contract=0x78C04F1c0d77DDb5684834AED7d8D75A9341C115&chainId=80001&tokenId=0"
+    src="https://ipfs.thirdwebcdn.com/ipfs/QmbAgC8YwY36n8H2kuvSWsRisxDZ15QZw3xGZyk9aDvcv7/erc721.html?contract=0x5B9E1B84e816Ad1629F9e76Ee2FbAdA4a896c5eA&chain=%7B%22name%22%3A%22Mumbai%22%2C%22chain%22%3A%22Polygon%22%2C%22rpc%22%3A%5B%22https%3A%2F%2Fmumbai.rpc.thirdweb.com%2F5a9bc94b87f7cbbbfbbc234bf1e07f0adf5f3cf3012c9f26f9fc9820d64df93a%22%5D%2C%22nativeCurrency%22%3A%7B%22name%22%3A%22MATIC%22%2C%22symbol%22%3A%22MATIC%22%2C%22decimals%22%3A18%7D%2C%22shortName%22%3A%22maticmum%22%2C%22chainId%22%3A80001%2C%22testnet%22%3Atrue%2C%22slug%22%3A%22mumbai%22%7D"
     width="600px"
     height="600px"
-    style="border:none;"
-    frameborder="10"
+    style="max-width:100%;"
+    frameborder="0"
     ></iframe></center>
 
 </body>
